[gd_scene load_steps=13 format=3 uid="uid://bg5tuvkfkc1t7"]

[ext_resource type="Script" uid="uid://dxsw16o6ow56k" path="res://Scripts/Enemy/enemy.gd" id="1_jpxen"]
[ext_resource type="Texture2D" uid="uid://6numdhl60ok" path="res://Assets/Art/Sprites/Characters/Enemies/snail-Sheet.png" id="2_xmpay"]

[sub_resource type="AtlasTexture" id="AtlasTexture_3oh8u"]
atlas = ExtResource("2_xmpay")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_wna5f"]
atlas = ExtResource("2_xmpay")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_wicfy"]
atlas = ExtResource("2_xmpay")
region = Rect2(16, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_4erml"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3oh8u")
}],
"loop": true,
"name": &"hit",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wna5f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wicfy")
}],
"loop": true,
"name": &"walk",
"speed": 2.0
}]

[sub_resource type="Animation" id="Animation_4erml"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(4, 4)]
}

[sub_resource type="Animation" id="Animation_jpxen"]
resource_name = "die"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.966667),
"transitions": PackedFloat32Array(0.0647043, 1),
"update": 0,
"values": [Vector2(4, 4), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ojtsa"]
_data = {
&"RESET": SubResource("Animation_4erml"),
&"die": SubResource("Animation_jpxen")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ojtsa"]
size = Vector2(64, 48)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jpxen"]
size = Vector2(64, 48)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4erml"]
size = Vector2(60, 4.5)

[node name="Enemy" type="CharacterBody2D" groups=["Enemy"]]
collision_mask = 2
script = ExtResource("1_jpxen")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(4, 4)
sprite_frames = SubResource("SpriteFrames_4erml")
animation = &"walk"
frame_progress = 0.906966

[node name="AnimationPlayer" type="AnimationPlayer" parent="AnimatedSprite2D"]
libraries = {
&"": SubResource("AnimationLibrary_ojtsa")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 8)
shape = SubResource("RectangleShape2D_ojtsa")

[node name="Hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(0, 8)
shape = SubResource("RectangleShape2D_jpxen")
debug_color = Color(0.949624, 1.44392e-06, 0.572582, 0.42)

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(0, -18)
shape = SubResource("RectangleShape2D_4erml")
debug_color = Color(0.651728, 0.518974, 3.85046e-07, 0.42)

[node name="RayCastWall" type="RayCast2D" parent="."]
target_position = Vector2(-45, 0)
collision_mask = 2

[node name="RayCastFloor" type="RayCast2D" parent="."]
target_position = Vector2(0, 45)
collision_mask = 2

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0

[connection signal="animation_finished" from="AnimatedSprite2D/AnimationPlayer" to="." method="_on_die_animation_finished"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_hurtbox_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
